# comp353_gen

./: Cargo.toml  companies.txt  employees.txt  ini_data.sql  out.sql  test.sql
generator/: Cargo.toml
generator/src/: lib.rs
generator/src/models/: client.rs  company.rs  employee.rs  mod.rs  person.rs  task.rs
generator/src/streams/: mod.rs  names.rs
src/: companies.rs  employees.rs  main.rs
